# memory_manager

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: configs.cmake
core/: CMakeLists.txt
core/private/: mem.cpp
core/public/: mem.hpp
demo/: CMakeLists.txt  main.cpp
src/cpp/demo/: CMakeLists.txt  main.cpp  main.hpp
src/cpp/mem/private/mem/: mem.cpp
src/cpp/mem/private/mem/engine/: MemoryEngine.cpp
src/cpp/mem/private/mem/utils/metrics/: DummyLogger.cpp
src/cpp/mem/public/mem/: CMakeLists.txt  mem.hpp
src/cpp/mem/public/mem/allocators/: LinearAllocator.hpp  StackAllocator.hpp
src/cpp/mem/public/mem/configs/: mem_log.hpp
src/cpp/mem/public/mem/engine/: MemoryEngine.hpp
src/cpp/mem/public/mem/resources/: IMemoryResource.hxx
src/cpp/mem/public/mem/utils/metrics/: DummyLogger.hpp
